<?xml version="1.0" encoding="utf-8"?> 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
     android:background="#00928D"
     android:gravity="center" >

     <ImageView
         android:id="@+id/imageView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/logo"/>

     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="55dp"
         android:text="@string/Application"
         android:textColor="#FFFFFF"
         android:textSize="30dp" />

	 <TextView
		 android:layout_width="wrap_content"
		 android:layout_height="wrap_content"
		 android:text="@string/version"
		 android:textColor="#FFFFFF"
		 android:id="@+id/version" />
		
	 <LinearLayout
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content" 
			android:id="@+id/linearLayout1"
			android:gravity="center"
			android:layout_marginTop="5dp">
		<ImageView
			android:id="@+id/widget0"
			android:layout_margin="5dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">
		</ImageView>
		<ImageView
			android:id="@+id/widget1"
			android:layout_margin="5dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">
		</ImageView>
		<ImageView
			android:id="@+id/widget2"
			android:layout_margin="5dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">
		</ImageView>
		<ImageView
			android:id="@+id/widget3"
			android:layout_margin="5dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">
		</ImageView>
		<ImageView
			android:id="@+id/widget4"
			android:layout_margin="5dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">
		</ImageView>
		
	</LinearLayout>
	 <TextView
		 android:layout_marginTop="150dp"
		 android:id="@+id/textView2"
		 android:layout_width="wrap_content"
		 android:layout_height="wrap_content"
		 android:text="@string/Chcompany"
		 android:textColor="#FFFFFF" >
	 </TextView>

	 <TextView
		 android:layout_width="wrap_content"
		 android:layout_height="wrap_content"
		 android:text="@string/Encompany"
		 android:textColor="#FFFFFF" />

 </LinearLayout> 