<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#00928D"
        android:scaleType="fitCenter"
        android:src="@drawable/logo" />

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <TableRow
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal">
            <EditText
                android:id="@+id/msgEditText"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:background="@drawable/my_shape_1"
                android:layout_gravity="center_vertical"
                android:capitalize="characters"
                android:focusable="true"
                android:hint="请输入SKU" />
        </TableRow>
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btStock"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/Stock"
            android:background="@drawable/select"
            android:focusable="false" />
        <Button
            android:id="@+id/btReplenishment"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/Replenishment"
            android:background="@drawable/select"
            android:focusable="false" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="#00928D" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/Encompany"
            android:textColor="#FFFFFF" />

    </RelativeLayout>
</LinearLayout>
