<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#00928D"
        android:scaleType="fitCenter"
        android:src="@drawable/logo" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:text=""
            android:id="@+id/wrongTextView"
            android:textColor="#CC0000"/>
        <!-- 输入用户名的行 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" >

                <EditText
                    android:id="@+id/userEditText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/my_shape_1"
                    android:capitalize="characters"
                    android:hint="请输入用户名" />
            </TableRow>
            <!-- 输入密码的行 -->

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" >

                <EditText
                    android:id="@+id/pwdEditText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/my_shape_1"
                    android:hint="请输入密码"
                    android:password="true" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="29dp"
                android:layout_marginTop="2dp"
                android:gravity="center_horizontal" >

                <CheckBox
                    android:id="@+id/logincheck"
                    android:layout_width="wrap_content"
                    android:layout_height="29dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="记住我，请点击" />
            </TableRow>
            <!-- 定义登录、取消按钮的行 -->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/bnLogin"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/login"
                    android:background="@drawable/select"/>

                <Button
                    android:id="@+id/bnconfigration"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/configration"
                    android:background="@drawable/select"/>
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="#00928D" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/Encompany"
                android:textColor="#FFFFFF" />

        </RelativeLayout>
    </RelativeLayout>

</TableLayout>
